--- a/index.html
+++ b/index.html
@@ -4,8 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+    <main id="content">
+        <section class="description">
+            <div class="container">
+                <div class="row">
+                    <div class="heading">
+                        <h1>The creatiwe crew</h1>
+                    </div>
+                    <div class="info">
+                        <h3>Who we are</h3>
+                        <p>We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+        <section class="team">
+            <div class="container">
+                <div class="row">
+                    <div class="crew column">
+                        <div class="image">
+                            <img src="./images/bill.png" alt="bill">
+                            <span>Product Owner</span>
+                        </div>
+                        <p>Bill Mahoney</p>
+                    </div>
+                    <div class="crew column">
+                        <div class="image">
+                            <img src="./images/saba.png" alt="saba">
+                            <span>Art Director</span>
+                        </div>
+                        <p>Saba Cabrera</p>
+                    </div>
+                    <div class="crew column">
+                        <div class="image">
+                            <img src="./images/shae.png" alt="bill">
+                            <span>Tech Lead</span>
+                        </div>
+                        <p>Shae Le</p>
+                    </div>
+                    <div class="crew column">
+                        <div class="image">
+                            <img src="./images/skylah.png" alt="bill">
+                            <span>UX Designer</span>
+                        </div>
+                        <p>Skylah Lu</p>
+                    </div>
+                    <div class="crew column">
+                        <div class="image">
+                            <img src="./images/griff.png" alt="bill">
+                            <span>Developer</span>
+                        </div>
+                        <p>Griff Richards</p>
+                    </div>
+                    <div class="crew column">
+                        <div class="image">
+                            <img src="./images/stan.png" alt="bill">
+                            <span>Developer</span>
+                        </div>
+                        <p>Stan John</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>    
 </body>
 </html>
