--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="row">
                     <div class="heading">
-                        <h1>The creatiwe crew</h1>
+                        <h1>The creative crew</h1>
                     </div>
                     <div class="info">
                         <h3>Who we are</h3>
